--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -8,6 +8,7 @@ include ../components/filter/filter
 include ../components/popup-welcome/popup-welcome
 include ../components/select-city-popup/select-city-popup
 include ../components/profile-popup/profile-popup
+include ../components/profile-common-popup/profile-common-popup
 
 block header
     +header
@@ -26,6 +27,9 @@ block popups
     +popup-welcome
     +filter-extended
     +select-city-popup
+    +profile-common-popup-call
+    +profile-common-popup-qr
+    +profile-common-popup-report
 
 block footer
     +footer
