--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -9,6 +9,7 @@ include ../components/popup-welcome/popup-welcome
 include ../components/select-city-popup/select-city-popup
 include ../components/profile-popup/profile-popup
 include ../components/profile-common-popup/profile-common-popup
+include ../components/profile-video-popup/profile-video-popup
 
 block header
     +header
@@ -20,6 +21,11 @@ block content
             +demo-link('model-list-no-models.html') 01_List_1_no models
             +demo-link('model-list-search-result.html') 01_List_8_search 2
             +demo-link('#profile-popup')(data-popup-id='#profile-popup' data-action='show').js-toggle-popup 02_card_1
+            +demo-link('#profile-call')(data-popup-id='#profile-call' data-action='show').js-toggle-popup 02_card/call
+            +demo-link('#profile-qr')(data-popup-id='#profile-qr' data-action='show').js-toggle-popup 02_card/QR
+            +demo-link('#profile-report')(data-popup-id='#profile-report' data-action='show').js-toggle-popup 02_card/report(1,2)
+            +demo-link('#profile-photo')(data-popup-id='#profile-photo' data-action='show').js-toggle-popup 02_card/photo popup
+            +demo-link('#profile-video')(data-popup-id='#profile-video' data-action='show').js-toggle-popup 02_card/video popup
     +arrow-up
 
 block popups
@@ -30,6 +36,7 @@ block popups
     +profile-common-popup-call
     +profile-common-popup-qr
     +profile-common-popup-report
+    +profile-video-popup
 
 block footer
     +footer
