--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -10,6 +10,7 @@ include ../components/select-city-popup/select-city-popup
 include ../components/profile-popup/profile-popup
 include ../components/profile-common-popup/profile-common-popup
 include ../components/profile-video-popup/profile-video-popup
+include ../components/profile-photo-popup/profile-photo-popup
 
 block header
     +header
@@ -37,6 +38,7 @@ block popups
     +profile-common-popup-qr
     +profile-common-popup-report
     +profile-video-popup
+    +profile-photo-popup
 
 block footer
     +footer
