--- a/markup/components/profile-popup/profile-popup.pug
+++ b/markup/components/profile-popup/profile-popup.pug
@@ -69,4 +69,5 @@ mixin profile-popup()
                             +recommended-slider
 
                         +e.row
-                            +reviews
+                            //+reviews
+                            +reviews-rate
