--- a/markup/components/reviews/reviews.styl
+++ b/markup/components/reviews/reviews.styl
@@ -26,6 +26,26 @@
         &::placeholder
             opacity: 1
 
+    &__rate-heading
+        display: block
+        margin-top: 19px
+        color rgba(darkGreyColor, .59)
+        font-family fontMain
+        font-size 16px
+        font-weight 400
+
+    &__rate
+        margin-top: 32px
+
+        &-row
+            display: flex
+
+            &:not(:first-child)
+                margin-top: 35px
+
+            .rating-interactive-counter:not(:last-child)
+                margin-right: 49px
+
     &__no-reviews
         margin-top: 35px
         display: block
