--- a/markup/components/model-list/model-list.pug
+++ b/markup/components/model-list/model-list.pug
@@ -6,6 +6,7 @@ include ../selectbox/selectbox
 include ../sort-ui/sort-ui
 include ../side-border-btn/side-border-btn
 include ../badges/badges
+include ../heading/heading
 
 mixin model-list()
     +b.model-list&attributes(attributes)
@@ -13,8 +14,7 @@ mixin model-list()
         +container
             +e.header
                 +e.header-col._flexible
-                    +e.H1.heading Independent
-                        span 38970
+                    +heading(38970).H1 Independent
                 +e.header-col.hide-mob.hide-when-header-fixed
                     +e.label Sort by
                     +selectbox('Date').__control
