--- a/markup/components/profile-popup/profile-popup.pug
+++ b/markup/components/profile-popup/profile-popup.pug
@@ -69,5 +69,7 @@ mixin profile-popup()
                             +recommended-slider
 
                         +e.row
-                            //+reviews
-                            +reviews-rate
+                            //- +reviews
+                            //- +reviews-rate
+                            //- +reviews-rate-no-login
+                            +reviews-feedbacks
