--- a/markup/components/agency-card/agency-card.styl
+++ b/markup/components/agency-card/agency-card.styl
@@ -3,6 +3,77 @@
     background-color: #fff
     padding: 0 40px
 
+    &_new
+        position: relative
+        padding: 0
+        padding-top: 25px
+        box-shadow: 0 20px 50px rgba(29, 29, 29, .02)
+        background-color: transparent
+
+        .avatar
+            margin-left: initial
+            position: absolute
+            top: 25px
+            left: 30px
+            transform: translateY(-50%)
+            z-index: 2
+
+        .badges
+            z-index: 2
+            top: 24px
+
+        .heading
+            color: #fff
+
+        & ^[0]__info
+            position: relative
+            z-index: 3
+            margin-left: 0
+            width: 270px
+            flex-shrink: 0
+            margin-right: 30px
+
+        & ^[0]__rating
+            position: relative
+            z-index: 3
+            margin-left: 0
+
+            &-label
+                color: #909090
+
+        & ^[0]__description
+            li
+                color: #909090
+
+                &:not(:last-child)::after
+                    background-color: #909090
+
+        & ^[0]__row
+            padding-left: 42px
+            padding-right: 41px
+
+        & ^[0]__col
+              &:first-child
+                width: 270px
+                flex-shrink: 0
+                margin-right: 30px
+
+              &:not(:last-child)
+                margin-right: 0p
+
+    &__picture
+        position absolute
+        top 0
+        left 0
+        right 0
+        bottom 0
+        margin auto
+        object-fit cover
+        font-family 'object-fit: cover'
+        width 0
+        min-width 100%
+        min-height 100%
+
     &__row
         padding: 30px 0
         display: flex
@@ -10,6 +81,28 @@
 
         &:not(:last-child)
             border-bottom: 1px solid borderColor
+
+        &_top
+            position: relative
+            padding-top: 56px
+            min-height: 140px
+            z-index: 1
+
+            &:before
+                content: ''
+                position: absolute
+                top: 0
+                left: 0
+                display: block
+                width: 100%
+                height: 100%
+                z-index: 1
+                background-color: rgba(darkGreyColor, .7)
+
+        &_bottom
+            align-items: center
+            min-height: 112px
+            background-color: #fff
 
     &__description
         display: flex
@@ -44,6 +137,14 @@
         .rating__value
             margin-left: 14px
 
+        &-label
+            font-size: 12px
+            font-weight: 400
+            text-transform: uppercase
+            margin-top: 8px
+            margin-bottom: 7px
+            color: rgba(darkGreyColor, .5)
+
     &__col
         &:not(:last-child)
             margin-right: 50px
@@ -52,8 +153,6 @@
             margin-left: auto
 
     .avatar
-        width: 50px
-        height: 50px
         margin-left: -10px
 
     .button
