--- a/markup/components/avatar/avatar.styl
+++ b/markup/components/avatar/avatar.styl
@@ -5,6 +5,10 @@
         width: 40px
         height: 40px
 
+    &_size_medium
+        width: 50px
+        height: 50px
+
     &_size_big
         width: 120px
         height: 120px
