--- a/markup/components/model-list/model-list.pug
+++ b/markup/components/model-list/model-list.pug
@@ -64,4 +64,4 @@ mixin model-list()
                 +model-preview([3, 3, 3, 3, 3], 'Sofi', 20, 325)
                 +model-preview([4, 4, 4, 4, 4], 'Anna', 22, 390)
 
-            +side-border-btn('button').__load Load more
+            +side-border-btn('button').__load.js-load-models Load more
