--- a/markup/components/short-info/short-info.styl
+++ b/markup/components/short-info/short-info.styl
@@ -14,7 +14,7 @@
 
     &__text
         display: block
-        line-height 22px
+        line-height 1.375
         font-size: 16px
         color: darkGreyColor
 
