--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -28,6 +28,7 @@ block content
             +demo-link('#profile-photo')(data-popup-id='#profile-photo' data-action='show').js-toggle-popup 02_card/photo popup
             +demo-link('#profile-video')(data-popup-id='#profile-video' data-action='show').js-toggle-popup 02_card/video popup
             +demo-link('agency-list.html') 03/List_agency_1
+            +demo-link('agency.html') 03/List_agency_(2-3)
     +arrow-up
 
 block popups
