--- a/markup/components/boost/boost.pug
+++ b/markup/components/boost/boost.pug
@@ -1,7 +1,9 @@
 include ../button/button
 
-mixin boost()
-    +b.boost&attributes(attributes)
+mixin boost(masonry)
+    - var masonryModifier = !!masonry ? '_masonry' : '';
+
+    +b.boost(class=masonryModifier)&attributes(attributes)
         +e.content
             +e.icon
                 != pugHelpers.Icon.call(locals, {iconName: 'arrow-boost', iconWidth: '16', iconHeight: '30'})
