--- a/markup/components/model-list/model-list.pug
+++ b/markup/components/model-list/model-list.pug
@@ -7,6 +7,8 @@ include ../sort-ui/sort-ui
 include ../side-border-btn/side-border-btn
 include ../badges/badges
 include ../heading/heading
+include ../boost/boost
+include ../vip/vip
 
 mixin model-list()
     +b.model-list&attributes(attributes)
@@ -22,33 +24,34 @@ mixin model-list()
                     +sort-ui
                 +e.header-col.hide-mob.hide-when-header-fixed
                     +button.A(href='#')._color_white._bg_darkGrey._uppercase.__control View on map
-            +grid-masonry(4, '.model-preview').js-model-preview-grid
-                +model-preview([7, 7, 7], 'Sonya', 20, 325, true)
+            +grid-masonry(4, '.js-masonry-item').js-model-preview-grid
+                +boost(true).js-masonry-item
+                +model-preview([7, 7, 7], 'Sonya', 20, 325, true).js-masonry-item
                     +badges._top
                         +badges-item._new._skew
                             span New
                         +badges-item._info
                             span 1 hour ago
-                +model-preview([5, 5, 5, 5], 'Megan', 22, 390)
+                +model-preview([5, 5, 5, 5], 'Megan', 22, 390).js-masonry-item
                     +badges._top
                         +badges-item._vip._skew
                             span Vip
                     +badges._bottom
                         +badges-item._verified._skew
                             span Verified
-                +model-preview([8, 8, 8, 8], 'Valeria', 26, 420)
+                +model-preview([8, 8, 8, 8], 'Valeria', 26, 420).js-masonry-item
                     +badges._top
                         +badges-item._vip._skew
                             span Vip
-                +model-preview([9, 9, 9, 9, 9, 9, 9], 'Sonya', 20, 325)
+                +model-preview([9, 9, 9, 9, 9, 9, 9], 'Sonya', 20, 325).js-masonry-item
                     +badges._bottom._skew
                         +badges-item._verified._skew
                             span Verified
-                +model-preview([2, 2, 2], 'Christine', 27, 370, true)
+                +model-preview([2, 2, 2], 'Christine', 27, 370, true).js-masonry-item
                     +badges._top
                         +badges-item._vip._skew
                             span Vip
-                +model-preview([6, 6, 6, 6], 'Anita', 24, 350)
+                +model-preview([6, 6, 6, 6], 'Anita', 24, 350).js-masonry-item
                     +badges._top
                         +badges-item._new._skew
                             span New
@@ -56,12 +59,13 @@ mixin model-list()
                             span 1 hour ago
                         +badges-item._vip._skew
                             span Vip
-                +model-preview([1, 1, 1, 1, 1, 1], 'Kate', 25, 380)
+                +model-preview([1, 1, 1, 1, 1, 1], 'Kate', 25, 380).js-masonry-item
                     +badges._top
                         +badges-item._vip._skew
                             span Vip
-                +model-preview([10, 10], 'Anna', 22, 390)
-                +model-preview([3, 3, 3, 3, 3], 'Sofi', 20, 325)
-                +model-preview([4, 4, 4, 4, 4], 'Anna', 22, 390)
+                +model-preview([10, 10], 'Anna', 22, 390).js-masonry-item
+                +vip(true).js-masonry-item
+                +model-preview([3, 3, 3, 3, 3], 'Sofi', 20, 325).js-masonry-item
+                +model-preview([4, 4, 4, 4, 4], 'Anna', 22, 390).js-masonry-item
 
             +side-border-btn('button').__load.js-load-models Load more
